terraform/02-argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: externaldns-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "alb"  # Instructs that this ingress should be managed by ALB Ingress Controller
    alb.ingress.kubernetes.io/scheme: "internet-facing"  # Specifies the ALB should be internet-facing
    external-dns.alpha.kubernetes.io/hostname: test2.tbalza.net  # ExternalDNS will use this to create a DNS record
spec:
  ingressClassName: "alb" ###
  rules:
  - host: test2.tbalza.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
